# qgss-2026

lab-0/: QGSS2026_Lab0.ipynb  QGSS2026_Lab0_ko.ipynb  README.md
lab-1/cpp/: CMakeLists.txt  README.md
lab-1/cpp/compat/: quantumcircuit.hpp  statevector.hpp  target.hpp  transpile.hpp
lab-1/python/: QGSS2026_Lab1.ipynb
